# Lex

./: Cargo.toml  README.md
dialogues/: demo_all.lex
src/: cli.rs  main.rs  parser.rs
src/parser/: config.rs  functions.rs  mod.rs  syntax.rs  tests.rs  types.rs
src/player/: mod.rs
