[package]
name = "dialogue-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
once_cell = "1.21.3"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-pickle = "1.2.0"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.23"
